--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Vertically centering with CSS</h1> 
+
+<!-- table -->
+<h2 class="title">table</h2>
+<div class="table">
+  <p>My table</p>
+</div>
+<!-- flexbox -->
+<h2 class="title">flexbox</h2>
+
+<div class="flexbox">
+  <p>My Flex box</p>
+</div>
+
+<!-- grid -->
+<h2 class="title">grid</h2>
+
+<div class="grid">
+  <p>My first Grid project</p>
+</div>
+
+<!-- flexbox and grid margins -->
+<h2 class="title">margins</h2>
+
+<div class="margins">
+  <p>Candembo Afonso</p>
+<!--   <img src="https://unsplash.it/250/250" alt=""> -->
+</div>
 </body>
 </html>
