--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Vertically centering with CSS</h1> 
 
 <!-- table -->
-<h2 class="title">table</h2>
+<h2 class="title">Afonso</h2>
 <div class="table">
   <p>My table</p>
 </div>
@@ -24,7 +24,7 @@
 </div>
 
 <!-- grid -->
-<h2 class="title">grid</h2>
+<h2 class="title">Candembo</h2>
 
 <div class="grid">
   <p>My first Grid project</p>
